<resources>
    <string name="app_name">Citizens of the World</string>
    <string name="location_name">Tokyo, Japan</string>

    <!--add/edit Location view/activity strings-->
    <string name="addLocationButton">Add Location</string>
    <string name="selectedPhotoButton">Choose Image</string>
    <string name="takePhotoButton">Take Photo</string>
    <string name="locationName">Name:</string>
    <string name="location">Location:</string>
    <string name="locationDescription">Description:</string>
    <string name="locationPrice">Price:</string>
    <string name="setLocationButton">Set Location</string>
    <string name="editPage">Edit Location</string>
    <string name="radioBtnUpload">Upload Image</string>
    <string name="radioBtnTakePic">Take Photo</string>
    <string name="ranking">Ranking</string>

    <string name="dateVisitedLbl">Date Visited: </string>
    <string name="plannedVisitLbl">Planned Visit: </string>
    <string name="latLngLbls">Lat/Lng: </string>
    <string-array name="listSorting">
        <item>All</item>
        <item>Favourite</item>
        <item>Planned</item>
        <item>Visited</item>
    </string-array>
    <string-array name="currencyCodes">
        <item>EUR €</item>
        <item>USD $</item>
        <item>JPY ¥</item>
        <item>GBP £</item>
    </string-array>


    <string-array name="ascdsclist">
        <item>Order By Name...</item>
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <!--Menu values for sorting-->
    <string name="sortFavourite">Favourite</string>
    <string name="sortPlanned">Planned</string>
    <string name="sortVisited">Visited</string>
    <string name="sortDefault">All</string>
    <string name="sortAsc">Ascending</string>
    <string name="sortDesc">Descending</string>
    <string name="sortAscDescName">By Name</string>
    <string name="sortAscDescLocation">By Location</string>
    <string name="sortAscDescRank">By Rank</string>

    <!--currency items-->
    <string name="yen">JPY ¥</string>
    <string name="usd">USD $</string>
    <string name="gbp">GBP £</string>
    <string name="eur">EUR €</string>
    <!--main menu-->
    <string name="sortFilter">Filter</string>
    <string name="orderBy">Order</string>
    <string name="currencySort">Currency</string>

    <!--menu for displaying x records-->
    <string name="numRecordToShow">Number of Records</string>
    <string name="recordCount5">Show 5</string>
    <string name="recordCount10">Show 10</string>
    <string name="recordCountAll">Show All</string>

    <!--User preferences-->
    <string name="preferences">User Preferences</string>
    <string name="setFaveCurrency">Favourite Currency</string>
    <string name="title_activity_maps">Map</string>
</resources>
