<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LocationsList">

    <item android:id="@+id/filter"
        android:title="@string/sortFilter">
        <menu>
            <item
                android:id="@+id/sortByDefault"
                android:title="@string/sortDefault"></item>
            <item
                android:id="@+id/sortByFavourite"
                android:title="@string/sortFavourite"></item>
            <item
                android:id="@+id/sortByPlanned"
                android:title="@string/sortPlanned"></item>
            <item
                android:id="@+id/sortByVisited"
                android:title="@string/sortVisited"></item>
        </menu>
    </item>
    <item android:id="@+id/ordering"
        android:title="@string/orderBy">
        <menu>
            <item android:id="@+id/sortByAsc"
                android:title="@string/sortAsc">
                <menu>
                    <item android:id="@+id/sortByAscName"
                        android:title="@string/sortAscDescName"></item>
                    <item android:id="@+id/sortByAscLocation"
                        android:title="@string/sortAscDescLocation"></item>
                    <item android:id="@+id/sortByAscRank"
                        android:title="@string/sortAscDescRank"></item>
                </menu>
            </item>
            <item android:id="@+id/sortByDesc"
                android:title="@string/sortDesc">
                <menu>
                    <item android:id="@+id/sortByDescName"
                        android:title="@string/sortAscDescName"></item>
                    <item android:id="@+id/sortByDescLocation"
                        android:title="@string/sortAscDescLocation"></item>
                    <item android:id="@+id/sortByDescRank"
                        android:title="@string/sortAscDescRank"></item>
                </menu>
            </item>
        </menu>
    </item>
    <item android:id="@+id/currency"
        android:title="@string/currencySort">
        <menu>
            <item android:id="@+id/jpy"
                android:title="@string/yen"></item>
            <item android:id="@+id/usd"
                android:title="@string/usd"></item>
            <item  android:id="@+id/eur"
                android:title="@string/eur"></item>
            <item android:id="@+id/gbp"
                android:title="@string/gbp"></item>
        </menu>
    </item>
    <item android:id="@+id/numRecordsToDisplay"
        android:title="@string/numRecordToShow">
        <menu>
            <item android:id="@+id/display5Records"
                android:title="@string/recordCount5"></item>
            <item android:id="@+id/display10Records"
                android:title="@string/recordCount10"></item>
            <item android:id="@+id/displayAllRecords"
                android:title="@string/recordCountAll"></item>
        </menu>

    </item>
    <item android:id="@+id/setPreferences"
        android:title="@string/preferences">
        <menu>
            <item android:id="@+id/faveCurrency"
                android:title="@string/setFaveCurrency"></item>
        </menu>
    </item>

</menu>